Agregar funcionalidad de login con JWT

--- a/GestorMantenimiento.API/appsettings.json
+++ b/GestorMantenimiento.API/appsettings.json
@@ -6,9 +6,12 @@
     }
   },
   "AllowedHosts": "*",
-
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=gestor.db"
-}
-
+  },
+  "Jwt": {
+    "Key": "MiClaveSuperSecretaDeAlMenos32Caracteres!!",
+    "Issuer": "GestorMantenimientoAPI",
+    "Audience": "GestorMantenimientoFrontend"
+  }
 }
